# kitchN

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bench_results.md  commit_msg_struct.tmp  in-memoria.db  install.sh  justfile  uninstall.sh
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: architecture.md  code_style.md  dependencies.md  kitchn_features.md  kitchn_logging_strategy.md  project_overview.md  suggested_commands.md  task_completion.md
assets/defaults/: system_dictionary.toml
assets/examples/: .gitignore  example.fpkg
assets/examples/config/: dictionary.toml  icons.toml  layout.toml  theme.toml
assets/examples/cpp/: Makefile  main.cpp
assets/examples/python/: main.py
assets/examples/rust/: Cargo.toml
assets/examples/rust/src/: main.rs
assets/fragments/: brave.frag  fish.frag  python.frag  stylus.frag  waybar.frag
assets/ingredients/: gtk-settings.ing  qt-theme.ing  sessions.ing  starship.ing  test.ing  zellij.ing
assets/scripts/: bench.sh  demo_logs.sh
crates/core_lib/src/: config.rs  factory.rs
crates/corelog/src/: main.rs
crates/hcore_cli/: Cargo.toml
crates/hcore_cli/benches/: db_bench.rs  pack_bench.rs
crates/hcore_cli/src/: main.rs
crates/hcore_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/hcore_ffi/src/: lib.rs
crates/hcore_lib/: Cargo.toml
crates/hcore_lib/src/: config.rs  db.rs  ffi.rs  fragment.rs  lib.rs  logger.rs  packager.rs  processor.rs
crates/hcore_lib/tests/: db_tests.rs
crates/hcore_log/: Cargo.toml
crates/hyprcore/src/: main.rs
crates/k-bin/: Cargo.toml
crates/k-bin/benches/: db_bench.rs  pack_bench.rs  render_bench.rs
crates/k-bin/src/: args.rs  cli_config.rs  logging.rs  main.rs
crates/k-bin/src/commands/: bake.rs  cook.rs  mod.rs  pantry.rs
crates/k-bin/tests/: cli_tests.rs
crates/k-ffi/: Cargo.toml
crates/k-ffi/src/: lib.rs
crates/k-lib/: Cargo.toml  cbindgen.toml
crates/k-lib/benches/: config_bench.rs
crates/k-lib/src/: config.rs  db.rs  ingredient.rs  logger.rs  packager.rs  processor.rs
crates/k-lib/tests/: db_tests.rs  processor_tests.rs
crates/k-log/: Cargo.toml
crates/k-log/src/: main.rs
crates/kitchn_cli/: Cargo.toml
crates/kitchn_cli/benches/: db_bench.rs  pack_bench.rs  render_bench.rs
crates/kitchn_cli/src/: main.rs  watcher.rs
crates/kitchn_cli/src/commands/: stock.rs  wrap.rs
crates/kitchn_cli/tests/: cli_tests.rs
crates/kitchn_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/kitchn_ffi/src/: lib.rs
crates/kitchn_lib/: Cargo.toml
crates/kitchn_lib/benches/: config_bench.rs  tera_bench.rs
crates/kitchn_lib/src/: config.rs  db.rs  defaults.toml  factory.rs  ingredient.rs  lib.rs  logger.rs  packager.rs  processor.rs
crates/kitchn_lib/tests/: processor_tests.rs
crates/kitchn_log/: Cargo.toml
crates/kitchn_log/src/: main.rs
include/: hcore.h  kitchn.h
