[package]
name = "hcore_lib"
version = "0.2.1"
edition = "2024"

[lib]
# crate-type removed to default to rlib

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
directories = "5.0.1"
colored = "2.2.0"
thiserror = "2.0.3" 
lazy_static = "1.5.0"
# CLI Logic Deps
zip = "2.2.2"
tera = "1.20.1"
anyhow = "1.0.100"
chrono = "0.4.39"
libc = "0.2.169"
bincode = { version = "2.0.1", features = ["serde"] }

[build-dependencies]
cbindgen = "0.29.2"

[dev-dependencies]
tempfile = "3.14.0"
