[package]
name = "kitchn"
version = "0.2.3"
edition = "2024"

[[bin]]
name = "kitchn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k-lib = { path = "../k-lib" }
clap = { version = "4.5.23", features = ["derive"] }
tera = "1.20.1"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
anyhow = "1.0.100"
directories = "5.0.1"
colored = "2.2.0"
zip = "2.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
which = "6.0"
libc = "0.2.178"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14.0"
criterion = "0.5.1"
assert_cmd = "2.0.16"
predicates = "3.1.2"
serde_json = "1.0.133"

[[bench]]
name = "pack_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false
