[package]
name = "k-log"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
k-lib = { path = "../k-lib", version = "0.2.2" }
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
colored = "2.2.0"
anyhow = "1.0.100"
directories = "5.0.1"
