[package]
name = "kitchn_log"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kitchn-log"
path = "src/main.rs"

[dependencies]
kitchn_lib = { path = "../kitchn_lib", version = "0.2.2" }
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
colored = "2.2.0"
anyhow = "1.0.100"
directories = "5.0.1"
